// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Providers: ConfigProvider: operatorConfigs should provide operator config 1`] = `
Array [
  Object {
    "additionalArguments": 1,
    "type": "has_any_word",
    "verboseName": "has any of the words",
    "visibility": Array [
      "messaging",
      "messaging_offline",
    ],
  },
  Object {
    "additionalArguments": 1,
    "type": "has_all_words",
    "verboseName": "has all of the words",
    "visibility": Array [
      "messaging",
      "messaging_offline",
    ],
  },
  Object {
    "additionalArguments": 1,
    "type": "has_phrase",
    "verboseName": "has the phrase",
    "visibility": Array [
      "messaging",
      "messaging_offline",
    ],
  },
  Object {
    "additionalArguments": 1,
    "type": "has_only_phrase",
    "verboseName": "has only the phrase",
    "visibility": Array [
      "messaging",
      "messaging_offline",
    ],
  },
  Object {
    "additionalArguments": 1,
    "type": "has_beginning",
    "verboseName": "starts with",
  },
  Object {
    "additionalArguments": 0,
    "categoryName": "Has Text",
    "type": "has_text",
    "verboseName": "has some text",
    "visibility": Array [
      "messaging",
      "messaging_offline",
    ],
  },
  Object {
    "additionalArguments": 0,
    "categoryName": "Has Number",
    "type": "has_number",
    "verboseName": "has a number",
  },
  Object {
    "additionalArguments": 2,
    "type": "has_number_between",
    "verboseName": "has a number between",
  },
  Object {
    "additionalArguments": 1,
    "type": "has_number_lt",
    "verboseName": "has a number below",
  },
  Object {
    "additionalArguments": 1,
    "type": "has_number_lte",
    "verboseName": "has a number at or below",
  },
  Object {
    "additionalArguments": 1,
    "type": "has_number_eq",
    "verboseName": "has a number equal to",
  },
  Object {
    "additionalArguments": 1,
    "type": "has_number_gte",
    "verboseName": "has a number at or above",
  },
  Object {
    "additionalArguments": 1,
    "type": "has_number_gt",
    "verboseName": "has a number above",
  },
  Object {
    "additionalArguments": 0,
    "categoryName": "Has Date",
    "type": "has_date",
    "verboseName": "has a date",
    "visibility": Array [
      "messaging",
      "messaging_offline",
    ],
  },
  Object {
    "additionalArguments": 1,
    "type": "has_date_lt",
    "verboseName": "has a date before",
    "visibility": Array [
      "messaging",
      "messaging_offline",
    ],
  },
  Object {
    "additionalArguments": 1,
    "type": "has_date_eq",
    "verboseName": "has a date equal to",
    "visibility": Array [
      "messaging",
      "messaging_offline",
    ],
  },
  Object {
    "additionalArguments": 1,
    "type": "has_date_gt",
    "verboseName": "has a date after",
    "visibility": Array [
      "messaging",
      "messaging_offline",
    ],
  },
  Object {
    "additionalArguments": 1,
    "type": "has_run_status",
    "verboseName": "has a run status of",
    "visibility": Array [
      "-",
    ],
  },
  Object {
    "additionalArguments": 1,
    "type": "has_group",
    "verboseName": "is in the group",
    "visibility": Array [
      "-",
    ],
  },
  Object {
    "additionalArguments": 0,
    "categoryName": "Has Phone",
    "type": "has_phone",
    "verboseName": "has a phone number",
  },
  Object {
    "additionalArguments": 0,
    "categoryName": "Has Email",
    "type": "has_email",
    "verboseName": "has an email",
    "visibility": Array [
      "messaging",
      "messaging_offline",
    ],
  },
  Object {
    "additionalArguments": 0,
    "categoryName": "Has Error",
    "type": "has_error",
    "verboseName": "has an error",
    "visibility": Array [
      "-",
    ],
  },
  Object {
    "additionalArguments": 0,
    "categoryName": "Not Empty",
    "type": "has_value",
    "verboseName": "is not empty",
  },
  Object {
    "additionalArguments": 0,
    "categoryName": "Has Attachment",
    "initialArgument": "@input.attachments",
    "type": "has_attachment",
    "verboseName": "has an attachment",
  },
  Object {
    "additionalArguments": 0,
    "type": "has_wait_timed_out",
    "verboseName": null,
    "visibility": Array [
      "-",
    ],
  },
  Object {
    "additionalArguments": 1,
    "type": "has_pattern",
    "verboseName": "matches regex",
  },
]
`;

exports[`Providers: ConfigProvider: operatorConfigs should provide operator config 2`] = `
Object {
  "has_all_words": Object {
    "additionalArguments": 1,
    "type": "has_all_words",
    "verboseName": "has all of the words",
    "visibility": Array [
      "messaging",
      "messaging_offline",
    ],
  },
  "has_any_word": Object {
    "additionalArguments": 1,
    "type": "has_any_word",
    "verboseName": "has any of the words",
    "visibility": Array [
      "messaging",
      "messaging_offline",
    ],
  },
  "has_attachment": Object {
    "additionalArguments": 0,
    "categoryName": "Has Attachment",
    "initialArgument": "@input.attachments",
    "type": "has_attachment",
    "verboseName": "has an attachment",
  },
  "has_beginning": Object {
    "additionalArguments": 1,
    "type": "has_beginning",
    "verboseName": "starts with",
  },
  "has_date": Object {
    "additionalArguments": 0,
    "categoryName": "Has Date",
    "type": "has_date",
    "verboseName": "has a date",
    "visibility": Array [
      "messaging",
      "messaging_offline",
    ],
  },
  "has_date_eq": Object {
    "additionalArguments": 1,
    "type": "has_date_eq",
    "verboseName": "has a date equal to",
    "visibility": Array [
      "messaging",
      "messaging_offline",
    ],
  },
  "has_date_gt": Object {
    "additionalArguments": 1,
    "type": "has_date_gt",
    "verboseName": "has a date after",
    "visibility": Array [
      "messaging",
      "messaging_offline",
    ],
  },
  "has_date_lt": Object {
    "additionalArguments": 1,
    "type": "has_date_lt",
    "verboseName": "has a date before",
    "visibility": Array [
      "messaging",
      "messaging_offline",
    ],
  },
  "has_email": Object {
    "additionalArguments": 0,
    "categoryName": "Has Email",
    "type": "has_email",
    "verboseName": "has an email",
    "visibility": Array [
      "messaging",
      "messaging_offline",
    ],
  },
  "has_error": Object {
    "additionalArguments": 0,
    "categoryName": "Has Error",
    "type": "has_error",
    "verboseName": "has an error",
    "visibility": Array [
      "-",
    ],
  },
  "has_group": Object {
    "additionalArguments": 1,
    "type": "has_group",
    "verboseName": "is in the group",
    "visibility": Array [
      "-",
    ],
  },
  "has_number": Object {
    "additionalArguments": 0,
    "categoryName": "Has Number",
    "type": "has_number",
    "verboseName": "has a number",
  },
  "has_number_between": Object {
    "additionalArguments": 2,
    "type": "has_number_between",
    "verboseName": "has a number between",
  },
  "has_number_eq": Object {
    "additionalArguments": 1,
    "type": "has_number_eq",
    "verboseName": "has a number equal to",
  },
  "has_number_gt": Object {
    "additionalArguments": 1,
    "type": "has_number_gt",
    "verboseName": "has a number above",
  },
  "has_number_gte": Object {
    "additionalArguments": 1,
    "type": "has_number_gte",
    "verboseName": "has a number at or above",
  },
  "has_number_lt": Object {
    "additionalArguments": 1,
    "type": "has_number_lt",
    "verboseName": "has a number below",
  },
  "has_number_lte": Object {
    "additionalArguments": 1,
    "type": "has_number_lte",
    "verboseName": "has a number at or below",
  },
  "has_only_phrase": Object {
    "additionalArguments": 1,
    "type": "has_only_phrase",
    "verboseName": "has only the phrase",
    "visibility": Array [
      "messaging",
      "messaging_offline",
    ],
  },
  "has_pattern": Object {
    "additionalArguments": 1,
    "type": "has_pattern",
    "verboseName": "matches regex",
  },
  "has_phone": Object {
    "additionalArguments": 0,
    "categoryName": "Has Phone",
    "type": "has_phone",
    "verboseName": "has a phone number",
  },
  "has_phrase": Object {
    "additionalArguments": 1,
    "type": "has_phrase",
    "verboseName": "has the phrase",
    "visibility": Array [
      "messaging",
      "messaging_offline",
    ],
  },
  "has_run_status": Object {
    "additionalArguments": 1,
    "type": "has_run_status",
    "verboseName": "has a run status of",
    "visibility": Array [
      "-",
    ],
  },
  "has_text": Object {
    "additionalArguments": 0,
    "categoryName": "Has Text",
    "type": "has_text",
    "verboseName": "has some text",
    "visibility": Array [
      "messaging",
      "messaging_offline",
    ],
  },
  "has_value": Object {
    "additionalArguments": 0,
    "categoryName": "Not Empty",
    "type": "has_value",
    "verboseName": "is not empty",
  },
  "has_wait_timed_out": Object {
    "additionalArguments": 0,
    "type": "has_wait_timed_out",
    "verboseName": null,
    "visibility": Array [
      "-",
    ],
  },
}
`;
